# Ken

./: .gitignore  CONTRIBUTING.md  Dockerfile.landing  Dockerfile.landing.dockerignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
deploy/: nginx-landing.conf
docs/: index.html
scripts/: make-icon.mjs  make-tray-icon.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-color.rgba
src-tauri/src/: codex.rs  llm.rs  local.rs  main.rs  models.rs  ollama.rs  search.rs
src/lib/: providers.ts
